Consolidate all CollectionManager/CollectionsManager/CollectionHandler duplicate implementations into one canonical CollectionManager in com (#2550)
By Jarvis agent Forge.

Co-authored-by: Jarvis Ops <jarvis-ops@users.noreply.github.com>