@@ -1,89 +1,61 @@
 package com.skyblock.collections;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+/**
+ * @deprecated Use {@link com.skyblock.core.manager.CollectionManager} instead.
+ */
+@Deprecated
 public final class CollectionsManager {
 
     private static final CollectionsManager INSTANCE = new CollectionsManager();
+    private final com.skyblock.core.manager.CollectionManager delegate =
+            com.skyblock.core.manager.CollectionManager.getInstance();
 
-    private final Map<UUID, Map<String, Long>> perPlayerCounts = new HashMap<>();
-    private final Map<UUID, List<String>> collectionsHistory = new HashMap<>();
-
-    private CollectionsManager() {
-    }
+    private CollectionsManager() {}
 
     public static CollectionsManager getInstance() {
         return INSTANCE;
     }
 
     public long addCount(UUID playerId, String collectionId, long amount) {
-        if (collectionId == null || collectionId.isBlank()) {
-            throw new IllegalArgumentException("collectionId must not be null or blank");
-        }
-        if (amount <= 0) {
-            throw new IllegalArgumentException("amount must be positive: " + amount);
-        }
-        long newTotal = perPlayerCounts.computeIfAbsent(playerId, id -> new HashMap<>())
-                .merge(collectionId, amount, Long::sum);
-        recordCollectionEvent(playerId, "Added " + amount + " " + collectionId + ": total " + newTotal);
-        return newTotal;
+        return delegate.addItems(playerId, collectionId, amount);
     }
 
     public long getCount(UUID playerId, String collectionId) {
-        Map<String, Long> counts = perPlayerCounts.get(playerId);
-        if (counts == null) {
-            return 0L;
-        }
-        return counts.getOrDefault(collectionId, 0L);
+        com.skyblock.core.model.Collection c = com.skyblock.core.model.Collection.parse(collectionId);
+        return c == null ? 0L : delegate.getItems(playerId, c);
     }
 
     public Map<String, Long> getCounts(UUID playerId) {
-        Map<String, Long> counts = perPlayerCounts.get(playerId);
-        return counts == null
-                ? Map.of()
-                : Collections.unmodifiableMap(new HashMap<>(counts));
+        Map<String, Long> result = new HashMap<>();
+        for (Map.Entry<com.skyblock.core.model.Collection, Long> e : delegate.getAll(playerId).entrySet()) {
+            result.put(e.getKey().itemKey, e.getValue());
+        }
+        return Collections.unmodifiableMap(result);
     }
 
     public void resetCounts(UUID playerId) {
-        perPlayerCounts.remove(playerId);
+        delegate.reset(playerId);
     }
 
-    // Collections history
-
     public void recordCollectionEvent(UUID playerId, String summary) {
-        collectionsHistory.computeIfAbsent(playerId, k -> new ArrayList<>()).add(summary);
+        delegate.recordCollectionEvent(playerId, summary);
     }
 
     public List<String> getCollectionsHistory(UUID playerId) {
-        return Collections.unmodifiableList(collectionsHistory.getOrDefault(playerId, new ArrayList<>()));
+        return delegate.getCollectionsHistory(playerId);
     }
 
     public Map<UUID, List<String>> getAllCollectionsHistory() {
-        Map<UUID, List<String>> copy = new HashMap<>();
-        for (Map.Entry<UUID, List<String>> entry : collectionsHistory.entrySet()) {
-            copy.put(entry.getKey(), Collections.unmodifiableList(entry.getValue()));
-        }
-        return Collections.unmodifiableMap(copy);
+        return delegate.getAllCollectionsHistory();
     }
 
     public String getCollectionStats(UUID playerId) {
-        Map<String, Long> counts = perPlayerCounts.getOrDefault(playerId, new HashMap<>());
-        List<Map.Entry<String, Long>> sorted = new ArrayList<>(counts.entrySet());
-        sorted.sort((a, b) -> Long.compare(b.getValue(), a.getValue()));
-        StringBuilder sb = new StringBuilder("Top Collections:");
-        int limit = Math.min(5, sorted.size());
-        if (limit == 0) {
-            sb.append(" none");
-        } else {
-            for (int i = 0; i < limit; i++) {
-                sb.append(" ").append(sorted.get(i).getKey()).append("=").append(sorted.get(i).getValue());
-            }
-        }
-        return sb.toString();
+        return delegate.getCollectionStats(playerId);
     }
 }
